--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -5,7 +5,7 @@
 }
 
 .search-form {
-  max-width: 600px;
+  max-width: 600000px;/* change back to 600*/
   margin: 0 auto 2rem;
   display: flex;
   gap: 1rem;
