--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -5,7 +5,7 @@
 }
 
 .search-form {
-  max-width: 600000px;/* change back to 600*/
+  max-width: 600px;/* change back to 600*/
   margin: 0 auto 2rem;
   display: flex;
   gap: 1rem;
@@ -17,8 +17,8 @@
   flex: 1;
   padding: 0.75rem 1rem;
   border: none;
-  border-radius: 4px;
-  background-color: #333;
+  border-radius: 4px;/*4*/
+  background-color: #2d6433;
   color: white;
   font-size: 1rem;
 }
