--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,8 +1,1 @@
-.main-content {
-  flex: 1;
-  padding: 2rem;
-  box-sizing: border-box;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
+.main-content { flex: 1; display: flex; flex-direction: column; width: 100%; }
